<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.data.build</groupId>
		<artifactId>spring-data-parent</artifactId>
		<version>3.0.0-M4</version>
	</parent>

	<groupId>org.springframework.data</groupId>
	<artifactId>spring-test-data-geode-build</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>spring-data-geode-test</module>
	</modules>

	<name>Spring Test Framework for Apache Geode</name>
	<description>
		This project introduces a Spring Data module building on the Spring Framework's TestContext,
		used to write Unit and Integration Tests for Spring Data for Apache Geode applications.
	</description>
	<url>https://github.com/jxblum/spring-data-tests-4-gemfire</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<comments>
				Copyright 2018-present the original author or authors.

				Licensed under the Apache License, Version 2.0 (the "License");
				you may not use this file except in compliance with the License.
				You may obtain a copy of the License at

				https://www.apache.org/licenses/LICENSE-2.0

				Unless required by applicable law or agreed to in writing, software
				distributed under the License is distributed on an "AS IS" BASIS,
				WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
				implied.
				See the License for the specific language governing permissions and
				limitations under the License.
			</comments>
		</license>
	</licenses>

	<organization>
		<name>Pivotal Software, Inc.</name>
		<url>https://www.pivotal.io</url>
	</organization>

	<developers>
		<developer>
			<id>jblum</id>
			<name>John Blum</name>
			<email>jblum at vmware dot com</email>
			<organization>VMware, Inc.</organization>
			<organizationUrl>https://www.spring.io</organizationUrl>
			<roles>
				<role>Spring Data Team</role>
				<role>Spring Data for Apache Cassandra Project Lead (Committer)</role>
				<role>Spring Data for Apache Geode Project Lead (Committer)</role>
				<role>Spring Test for Apache Geode Project Lead (Committer)</role>
				<role>Spring Session for Apache Geode Project Lead (Committer)</role>
				<role>Spring Boot for Apache Geode Project Lead (Committer)</role>
				<role>Apache Geode Committer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<java.version>17</java.version>
		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<source.level>${java.version}</source.level>
		<apache-geode.version>1.14.4</apache-geode.version>
		<assertj.version>3.23.1</assertj.version>
		<jakarta-annotation-api.version>2.0.0</jakarta-annotation-api.version>
		<junit.version>4.13.2</junit.version>
		<log4j.version>2.17.2</log4j.version>
		<logback.version>1.2.11</logback.version>
		<lombok.version>1.18.24</lombok.version>
		<micrometer.version>1.10.0-M2</micrometer.version>
		<mockito.version>4.6.1</mockito.version>
		<multithreadedtc.version>1.01</multithreadedtc.version>
		<pivotal-gemfire.version>9.10.15</pivotal-gemfire.version>
		<spring.version>6.0.0-M4</spring.version>
		<spring-boot.version>3.0.0-M3</spring-boot.version>
		<spring-data-bom.version>2022.0.0-M4</spring-data-bom.version>
		<spring-shell.version>1.2.0.RELEASE</spring-shell.version>
	</properties>

	<repositories>
		<repository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>${jakarta-annotation-api.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-bom</artifactId>
				<version>${micrometer.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
			<dependency>
				<groupId>edu.umd.cs.mtc</groupId>
				<artifactId>multithreadedtc</artifactId>
				<version>${multithreadedtc.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geode</groupId>
				<artifactId>geode-core</artifactId>
				<version>${apache-geode.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geode</groupId>
				<artifactId>geode-cq</artifactId>
				<version>${apache-geode.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geode</groupId>
				<artifactId>geode-lucene</artifactId>
				<version>${apache-geode.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.geode</groupId>
				<artifactId>geode-wan</artifactId>
				<version>${apache-geode.version}</version>
			</dependency>
			<dependency>
				<groupId>io.pivotal.gemfire</groupId>
				<artifactId>geode-core</artifactId>
				<version>${pivotal-gemfire.version}</version>
			</dependency>
			<dependency>
				<groupId>io.pivotal.gemfire</groupId>
				<artifactId>geode-cq</artifactId>
				<version>${pivotal-gemfire.version}</version>
			</dependency>
			<dependency>
				<groupId>io.pivotal.gemfire</groupId>
				<artifactId>geode-lucene</artifactId>
				<version>${pivotal-gemfire.version}</version>
			</dependency>
			<dependency>
				<groupId>io.pivotal.gemfire</groupId>
				<artifactId>geode-wan</artifactId>
				<version>${pivotal-gemfire.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${spring.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-bom</artifactId>
				<version>${spring-data-bom.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>edu.umd.cs.mtc</groupId>
			<artifactId>multithreadedtc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-geode</artifactId>
		</dependency>
		<!-- Spring Shell and Logging (Log4j and Logback) dependencies only required for Testing -->
		<dependency>
			<groupId>org.springframework.shell</groupId>
			<artifactId>spring-shell</artifactId>
			<version>${spring-shell.version}</version>
			<optional>true</optional>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
			<version>${log4j.version}</version>
			<optional>true</optional>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<optional>true</optional>
			<scope>runtime</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
						<!-- <classpath>${java.home}/lib/tools.jar</classpath> -->
					</compilerArgs>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>
						-Dgemfire.log-level=warning
					</argLine>
					<includes>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
					<reuseForks>false</reuseForks>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
